# sdl-skeleton

./: CMakeLists.txt  locations.cc  locations.hh  main.cc  skeleton.cc  skeleton.hh
gfx/: glew.c  sdlwidget.cc  sdlwidget.hh
